feat: adiciona controllers, services, corrige bugs e configura swagger